[tool.poetry]
name = "amqproto"
version = "1.0.0"
description = ""
authors = ["Dmitry Malinovsky <damalinov@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.5.2"
attrs = ">=17.3"

[tool.poetry.dev-dependencies]
ipython = "^6.5"
ipdb = "^0.11.0"
tox = "^3.2"
pytest = "^3.7"
pytest-asyncio = "^0.9.0"
requests = "^2.19"
async_generator = "^1.10"
