[metadata]
name = amqproto
version = 0.1
license = BSD 3-clause
requires_dist =
    transitions>=0.5
    attrs>=16.0,<17  # pytest-docker explicitly requests <17
    backoff>=1.4.3

[files]
packages = amqproto

[extras]
development =
    ipython>=6.0
    ipdb>=0.10

testing =
    pytest
    coverage
    pytest-cov
    hypothesis>=3.17.0

codestyle =
    flake8
    pylint
    pyformat
    isort

asyncio =
    async_generator
    async_timeout

testing_asyncio =
    [testing]
    [asyncio]
    pytest-asyncio>=0.5
    pytest-docker>=0.5
    requests

all =
    [development]
    [codestyle]
    [testing_asyncio]
