[metadata]
name = amqproto
version = 0.1
license = BSD 3-clause
requires_dist =
    attrs>=17.2
    construct>=2.8.16

[files]
packages = amqproto

[extras]
development =
    ipython>=6.0
    ipdb>=0.10

testing =
    pytest
    coverage
    pytest-cov
    hypothesis>=3.17.0

codestyle =
    flake8
    pylint
    pyformat
    isort

asyncio =
    async_timeout

testing_asyncio =
    [testing]
    [asyncio]
    pytest-asyncio>=0.5
    pytest-docker>=0.5
    requests

all =
    [development]
    [codestyle]
    [testing_asyncio]
