[metadata]
name = amqproto
version = 0.1
license = BSD 3-clause
requires_dist =
    attrs>=17.3
    construct>=2.8.16

[files]
packages = amqproto

[extras]
development =
    ipython>=6.0
    ipdb>=0.10

testing =
    pytest>=3.2
    coverage
    pytest-cov

codestyle =
    flake8
    pylint
    pyformat
    isort

testing_asyncio =
    [testing]
    pytest-asyncio>=0.8
    requests

all =
    [development]
    [codestyle]
    [testing_asyncio]
